<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CFE8E6"
    tools:context=".Ejer_autocuidado">

    <TextView
        android:id="@+id/textView64"
        android:layout_width="189dp"
        android:layout_height="60dp"
        android:layout_marginStart="196dp"
        android:layout_marginLeft="196dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:gravity="center_horizontal"
        android:text="@string/ejer_titulo_ejertododia"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:fontFamily="casual"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.911"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button17"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/ovalo"
        android:onClick="Atras"
        android:text="@string/BtAtras"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="345dp"
        android:layout_height="469dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView55"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/ejer_autocuidado_titulo"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/design_default_color_secondary_variant"
                android:textStyle="bold"
                app:fontFamily="casual" />

            <TextView
                android:id="@+id/textView56"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ejer_autocuidado_parte1"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/design_default_color_on_secondary"
                app:fontFamily="casual" />

            <ImageView
                android:id="@+id/imageView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/aguacate_ejer" />

            <TextView
                android:id="@+id/textView57"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ejer_autocuidado_parte2"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/design_default_color_on_secondary"
                app:fontFamily="casual" />

            <ImageView
                android:id="@+id/imageView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/aguacate_medit" />

            <TextView
                android:id="@+id/textView59"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ejer_autocuidado_parte3"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/design_default_color_on_secondary"
                app:fontFamily="casual" />

            <ImageView
                android:id="@+id/imageView21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/healthy_food" />

            <TextView
                android:id="@+id/textView60"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ejer_autocuidado_parte4"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/design_default_color_on_secondary"
                app:fontFamily="casual" />

            <ImageView
                android:id="@+id/imageView22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/aguacate_durm" />

            <TextView
                android:id="@+id/textView61"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ejer_autocuidado_parte5"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/design_default_color_on_secondary"
                app:fontFamily="casual" />

            <ImageView
                android:id="@+id/imageView23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/aguacate_rutina" />

            <TextView
                android:id="@+id/textView62"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ejer_autocuidado_parte6"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/design_default_color_on_secondary"
                app:fontFamily="casual" />

            <ImageView
                android:id="@+id/imageView26"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/aguacate_friends" />

            <TextView
                android:id="@+id/textView63"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ejer_autocuidado_parte7"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/design_default_color_on_secondary"
                app:fontFamily="casual" />

            <ImageView
                android:id="@+id/imageView25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/aguacate_danc" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>